# c_project

./: .hello.c.swp  .int_val.c.swp  README.md  a.out  build.txt  hello  hello.c  int_val
01_C_Tutorial/: README.md
01_C_Tutorial/01tutorialspoint/: README.md
01_C_Tutorial/02_Let_US_C/: README.md
01_C_Tutorial/03_9c_guide_japan_version/: README.md
01_C_Tutorial/04_VsCode_macOS_Debugging/: main.c
01_C_Tutorial/04_c_memory/: README.md
01_C_Tutorial/05_Assembly_Lang_C/: README.md
01_C_Tutorial/06_C_Pointers/: README.md
01_C_Tutorial/06_C_Pointers/a02_pointer/: CMakeLists.txt  README.md
01_C_Tutorial/06_C_Pointers/a02_pointer/src/: main.c
01_C_Tutorial/07_The_Classic_Book_by_Kernigan_Ritchie/: README.md
01c_tutorial/: README.md
02_Debugging_VScode_etc/: README.md
02_Debugging_VScode_etc/c_debugger/: README.md
02_Debugging_VScode_etc/c_debugger02_macOS/: README.md
02_Makefile_Debugging_VScode_etc/: .gitignore  Makefile  README.md
02_Makefile_Debugging_VScode_etc/c_debugger/: main.c
02_Makefile_Debugging_VScode_etc/c_debugger02_macOS/: main.c  (+2 more)
03_valgrind_leak_memory_check/: README.md
06_C_Game_Dev/: README.md
07_c_lldb_convert/: README.md
99_C23_project/: README.md
C_Pointer_Training/: README.md
C_Training/: README.md  harry  main.bc  main.i
C_gcc_wall_save-temps/: README.md  add.c  main.s
algorithm/: README.md
c_debugger/: main.c
hello_c_lang/: README.md  main.c
tsoding_c/: README.md
valgrind_leak_memory_check/: README.md
varible/: .float.c.swp  float  int_val.c  scanf.c  sizeofval  sizeofval.c  sizeofval2  sizeofval2.c
(+144 files in other folders)
